src/grammar/snapshots/bnfgen__grammar__test__invalid_re.snap
---
source: src/grammar/mod.rs
expression: ui
---
  × Invalid regex
   ╭────
 1 │ <R> ::= re("["); 
   ·         ───┬───
   ·            ╰── this regex is invalid
   ╰────
