src/grammar/snapshots/bnfgen__grammar__test__invalid_repeat.snap
---
source: src/grammar/mod.rs
expression: ui
---
  × Invalid repeat range
   ╭─[2:21]
 1 │ 
 2 │             <E> ::= "a" {10, 1};
   ·                     ─────┬─────
   ·                          ╰── min should be less than or equal to max
 3 │         
   ╰────
