src/grammar/snapshots/bnfgen__grammar__test__invalid_token.snap
---
source: src/grammar/mod.rs
expression: ui
---
  × Invalid token
   ╭────
 1 │ *
   · ┬
   · ╰── this token is invalid
   ╰────
