src/grammar/snapshots/bnfgen__grammar__test__tri_loop.snap
---
source: src/grammar/mod.rs
expression: ui
---
  × May be trapped in a dead loop
   ╭─[5:13]
 4 │             <term> ::= "Terminal" ;
 5 │             <A> ::= <B> ;
   ·             ──────┬──────
   ·                   ╰── this rule may be trapped in a dead loop
 6 │             <B> ::= <C> ;
   ·             ──────┬──────
   ·                   ╰── this rule may be trapped in a dead loop
 7 │             <C> ::= <A> ;
   ·             ──────┬──────
   ·                   ╰── this rule may be trapped in a dead loop
 8 │         
   ╰────
