src/grammar/snapshots/bnfgen__grammar__test__unexpected_eof.snap
---
source: src/grammar/mod.rs
expression: ui
---
  × Unrecognized EOF
   ╭────
 1 │ <start> ::= "Hello" | "World"
   ·                             ┬
   ·                             ╰── expect "{", "|", ";", "re", "str", "nonterminal"
   ╰────
