src/grammar/snapshots/bnfgen__grammar__test__unreachable_nt.snap
---
source: src/grammar/mod.rs
expression: ui
---
  × Found unreachable rules
   ╭─[3:13]
 2 │             <E> ::= "Hello" | <A> ;
 3 │             <W> ::= "World" ;
   ·             ────────┬────────
   ·                     ╰── this rule is unreachable
 4 │             <A> ::= <B> ;
 5 │             <B> ::= <A> ;
 6 │             <C> ::= <W> ;
   ·             ──────┬──────
   ·                   ╰── this rule is unreachable
 7 │         
   ╰────
